--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                             <!-- Slider -->
                             <section class="cd-intro">
                                 <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
-                                <span>HI, MY NAME IS JONATHON & I AM A</span><br>
+                                <span>HI, MY NAME IS NANETTE & I AM A</span><br>
                                 <span class="cd-words-wrapper">
-                                    <b class="is-visible">DESIGNER</b>
-                                    <b>DEVELOPER</b>
-                                    <b>FATHER</b>
+                                    <b class="is-visible">WRITER</b>
+                                    <b>COMMUNICATOR</b>
+                                    <b>SPEEKER</b>
                                 </span>
                                 </h1>
                                 </section> <!-- cd-intro -->
