--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <span class="cd-words-wrapper">
                                     <b class="is-visible">WRITER</b>
                                     <b>COMMUNICATOR</b>
-                                    <b>SPEEKER</b>
+                                    <b>SPEAKER</b>
                                 </span>
                                 </h1>
                                 </section> <!-- cd-intro -->
