--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                                 <span>HI, MY NAME IS NANETTE & I AM A</span><br>
                                 <span class="cd-words-wrapper">
                                     <b class="is-visible">WRITER</b>
+                                    <b>Story Teller</b>
                                     <b>COMMUNICATOR</b>
-                                    <b>SPEAKER</b>
                                 </span>
                                 </h1>
                                 </section> <!-- cd-intro -->
