--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <span>HI, MY NAME IS NANETTE & I AM A</span><br>
                                 <span class="cd-words-wrapper">
                                     <b class="is-visible">WRITER</b>
-                                    <b>Story Teller</b>
+                                    <b>Storyteller</b>
                                     <b>COMMUNICATOR</b>
                                 </span>
                                 </h1>
