--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Dew Drop
+                                    Marketing Plan
                                 </a>
                                 </h4>
                                 <p>
@@ -225,7 +225,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Bottle Mockup
+                                    Adobi Illustrator Logos
                                 </a>
                                 </h4>
                                 <p>
@@ -248,7 +248,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Table Design
+                                    HTML Storefront
                                 </a>
                                 </h4>
                                 <p>
@@ -271,7 +271,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Make Up elements
+                                    Recording Work
                                 </a>
                                 </h4>
                                 <p>
@@ -294,7 +294,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Shoping Bag Concept
+                                    Vector Art
                                 </a>
                                 </h4>
                                 <p>
@@ -317,7 +317,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Caramel Bottle
+                                    Creative Writing
                                 </a>
                                 </h4>
                                 <p>
