--- a/blog-right-sidebar.html
+++ b/blog-right-sidebar.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Timer Agency Template</title>
+        <title>N Ambrose Portfolio</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -89,8 +89,17 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <!--  <li><a href="gallery.html">Gallery</a></li> -->
+                                        <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
+                                        <li><a href="single-portfolio-recording.html">Recording work</a></li>
+                                        <li><a href="single-portfolio-logos.html">Logos</a></li>
+                                        <li><a href="single-portfolio-storefront.html">HTML Storefront</a></li>
+                                        <li><a href="single-portfolio-css-creature.html">CSS Creature</a></li>
+                                        <li><a href="single-portfolio-java-library.html">Java Library</a></li>
+                                        <li><a href="single-portfolio-Ajax-friend.html">Node Chat App</a></li>
+                                        <li><a href="single-portfolio-vector.html">Vector Art</a></li>
+                                        <li><a href="single-portfolio-writing.html">Creative Writing</a></li>
+
                                     </ul>
                                 </div>
                             </li>
