--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Timer Agency Template</title>
+        <title>N Ambrose Portfolio</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -86,17 +86,26 @@
                                 <a href="index.html" >Home</a>
                             </li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
+                            <!-- <li><a href="service.html">Service</a></li> -->
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                        <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
+                                        <li><a href="single-portfolio-recording.html">Recording work</a></li>
+                                        <li><a href="single-portfolio-logos.html">Logos</a></li>
+                                        <li><a href="single-portfolio-storefront.html">HTML Storefront</a></li>
+                                        <li><a href="single-portfolio-css-creature.html">CSS Creature</a></li>
+                                        <li><a href="single-portfolio-java-library.html">Java Library</a></li>
+                                        <li><a href="single-portfolio-Ajax-friend.html">Node Chat App</a></li>
+                                        <li><a href="single-portfolio-vector.html">Vector Art</a></li>
+                                        <li><a href="single-portfolio-writing.html">Creative Writing</a></li>
+
                                     </ul>
                                 </div>
                             </li>
-                            <li class="dropdown">
+                            <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
@@ -105,7 +114,7 @@
                                         <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
                                     </ul>
                                 </div>
-                            </li>
+                            </li> -->
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -147,15 +156,15 @@
         <section id="contact-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="block">
                             <h2 class="subtitle wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Contact With Me</h2>
                             <p class="subtitle-des wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".5s">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, ea!
-                                 consectetur adipisicing elit. Dolore, ea!
+                                <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, ea!
+                                 consectetur adipisicing elit. Dolore, ea! -->
                             </p>
                             <div class="contact-form">
-                                <form id="contact-form" method="post" action="sendmail.php" role="form">
+                                <form id="contact-form" method="post" action="https://formspree.io/ambrosenanette8@gmail.com" role="form">
                         
                                     <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".6s">
                                         <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
@@ -182,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                          <div class="map-area">
                             <h2 class="subtitle  wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Find Us</h2>
                             <p class="subtitle-des wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".5s">
@@ -194,28 +203,28 @@
                                 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row address-details">
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         <div class="address wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".3s">
                             <i class="ion-ios-location-outline"></i>
                             <h5>125 , Kings Street,Melbourne <br>United Kingdom,600562</h5>
                         </div>
-                    </div>
-                    <div class="col-md-3">
+                    </div> -->
+                    <!-- <div class="col-md-4">
                         <div class="address wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".5s">
                             <i class="ion-ios-location-outline"></i>
                             <h5>125 , Kings Street,Melbourne <br>United Kingdom,600562</h5>
                         </div>
-                    </div>
-                    <div class="col-md-3">
+                    </div> -->
+                    <div class="col-md-6">
                         <div class="email wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".7s">
                             <i class="ion-ios-email-outline"></i>
-                            <p>support@themefisher.com<br>support@themefisher.com</p>
+                            <p>ambrosenanette8@gmail.com<br>ambrosenanette8@gmail.com</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="phone wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".9s">
                             <i class="ion-ios-telephone-outline"></i>
                             <p>+07 052 245 022<br>+07 999 999 999</p>
