--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                                     I am versatile, adaptable and driven. I have done work in design, programming, marketing, worked with audio engineers, and have an industry gold badge from Eleven Fifty Coding Academy. Adding to all this I also have an understanding of Agile and Scrum. With this wide range of experience, I am uniquely qualified when it come to cross functional communication.
                                 </p>
                                 <p>I am seeking an internship working in cross functional communication.</p>
+                                <p> <a href="Nanette_Ambrose_Resume.pdf"> My Resume </a> <a link="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"> Linkedin</a></p>
                             </div>
                             
                         </div>
@@ -350,7 +351,7 @@
                      <figcaption>
                         <h4>
                             <a href="single-portfolio-java-library.html">
-                                JAVA Library
+                                JavaScript Library
                             </a>
                         </h4>
                         <p>
