--- a/single-portfolio-java-library.html
+++ b/single-portfolio-java-library.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>JAVA Library</title>
+        <title>JavaScript Library</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -151,7 +151,7 @@
                             <div class="portfolio-single-img">
                                 <img class="img-responsive" alt="" src="images/portfolio/java-library.png">
                             </div>
-                            <a href="https://github.com/NayNay811/Java-Library">Java Library</a>
+                            <a href="https://github.com/NayNay811/Java-Library">JavaScript Library</a>
                             <div class="portfolio-content">
                                 <p>
                                     This is a library of Java script commands? Functions? I learned while gaining my gold badge from Eleven Fifty Academy, and shows my understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
@@ -168,7 +168,7 @@
 
             <section class="works works-fit">
             <div class="container">
-                <h2 class="subtitle">Some Of Our Features Works</h2>
+                <h2 class="subtitle">Featured Works</h2>
                     <p class="subtitle-des">
                         Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
                     </p>
