--- a/single-portfolio-Ajax-friend.html
+++ b/single-portfolio-Ajax-friend.html
@@ -168,7 +168,7 @@
 
             <section class="works works-fit">
             <div class="container">
-                <h2 class="subtitle">Some Of Our Features Works</h2>
+                <h2 class="subtitle">Featured Works</h2>
                     <!-- <p class="subtitle-des">
                         Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
                     </p> -->
@@ -211,7 +211,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-java-library.html">
-                                        Java Library       
+                                       JavaScript Library       
                                     </a>
                                 </h4>
                                 <p>
