--- a/single-portfolio-storefront.html
+++ b/single-portfolio-storefront.html
@@ -168,7 +168,7 @@
 
             <section class="works works-fit">
             <div class="container">
-                <h2 class="subtitle">Some Of Our Features Works</h2>
+                <h2 class="subtitle">Featured Works</h2>
                     <!-- <p class="subtitle-des">
                         Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
                     </p> -->
