Storefronht and img fix

--- a/single-portfolio-storefront.html
+++ b/single-portfolio-storefront.html
@@ -149,9 +149,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/storefrontstools.png">
+                                <img class="img-responsive" src="images/portfolio/storefrontstools.png">
                             </div>
-                            <a href="html_storefront/store_front.html">Mock Store Front</a>
+                            <a href="HTML_storefront/store_front.html">Mock Store Front</a>
                             <div class="portfolio-content">
                                 <p>
                                     One of the many projects I completed getting my gold badge from Eleven Fifty Academy. This humorous mock store front was done entirely with html and bootstrap, while html is by no means my specialty, I do have an understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
