vestor and logo img

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
                     <div class="col-sm-4 col-xs-12">
                         <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/placeholder.png" class="img-responsive" alt="this is a title" >
+                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="this is a title" >
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <a rel="gallery" class="fancybox" href="images/portfolio/placeholder.png">Demo</a>
+                                        <a rel="gallery" class="fancybox" href="images/portfolio/logos_big.pdf">Demo</a>
                                         <a target="_blank" href="single-portfolio-logos.html">Details</a>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-logos.html">
-                                        Adobi Illustrator Logos
+                                        Adobe Illustrator Logos
                                     </a>
                                 </h4>
                                 <p>
@@ -364,10 +364,10 @@
             <div class="col-sm-4 col-xs-12">
                 <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="900ms">
                     <div class="img-wrapper">
-                        <img src="images/portfolio/placeholder.png" class="img-responsive" alt="" >
+                        <img src="images/portfolio/my_face_cover.png" class="img-responsive" alt="" >
                         <div class="overlay">
                             <div class="buttons">
-                                <a rel="gallery" class="fancybox" href="images/portfolio/placeholder.png">Demo</a>
+                                <a rel="gallery" class="fancybox" href="images/my_face_big.pdf">Demo</a>
                                 <a target="_blank" href="single-portfolio-vector.html">Details</a>
                             </div>
                         </div>
