--- a/single-portfolio-marketing.html
+++ b/single-portfolio-marketing.html
@@ -224,7 +224,7 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/item-3.jpg" class="img-responsive" alt="">
+                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
                                        <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-3.jpg">Demo</a>   -->      
@@ -235,7 +235,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-logos.html">
-                                        Adobi Illustrator Logos        
+                                        Adobe Illustrator Logos        
                                     </a>
                                 </h4>
                                 <p>
