--- a/single-portfolio-css-creature.html
+++ b/single-portfolio-css-creature.html
@@ -235,7 +235,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-java-library.html">
-                                        Java Library        
+                                        JavaScript Library        
                                     </a>
                                 </h4>
                                 <p>
@@ -248,7 +248,7 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/item-4.jpg" class="img-responsive" alt="">
+                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
                                         <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>   -->      
@@ -259,7 +259,7 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-Logos.html">
-                                        Adobi Illustrator Logos      
+                                        Adobe Illustrator Logos      
                                     </a>
                                 </h4>
                                 <p>
