--- a/single-portfolio-logos.html
+++ b/single-portfolio-logos.html
@@ -149,8 +149,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/placeholder.png">
+                                <img class="img-responsive" alt="" src="images/portfolio/logo_cover_picture.png">
                             </div>
+                            <a href="images/portfolio/logos_big.pdf">Logos.pdf</a>
                             <div class="portfolio-content">
                                 <p>
                                     These logos were created in a class working with the Adobi sweet, specifically Adobi illustrator. Graphic design is not my specialty, but I do understand how to use the Adobi sweet, and its limitations. While in this class I bumped into and worked next to many different artists with their own specialties, and talents. This expectance was a pleasure to do, and I had a great deal of fun learning these programs, creating this art, and working with a diverse group of talented people. 
@@ -247,7 +248,7 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/item-4.jpg" class="img-responsive" alt="">
+                                <img src="images/portfolio/my_face_cover.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
                                        <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>  -->       
