I Hope to god this works

--- a/Old_pages/single-portfolio-java-library.html
+++ b/Old_pages/single-portfolio-java-library.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Creative Writing</title>
+        <title>JavaScript Library</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -86,12 +86,12 @@
                                 <a href="index.html" >Home</a>
                             </li>
                             <li><a href="about.html">About</a></li>
-                            <!-- <li><a href="service.html">Service</a></li> -->
+                           <!--  <li><a href="service.html">Service</a></li> -->
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                        <!-- <li><a href="gallery.html">Gallery</a></li> -->
                                         <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
                                         <li><a href="single-portfolio-recording.html">Recording work</a></li>
                                         <li><a href="single-portfolio-logos.html">Logos</a></li>
@@ -132,9 +132,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2>Creative Writing</h2>
+                            <h2>JAVA Library</h2>
                             <div class="portfolio-meta">
-                               <span>Feb 9, 2018</span>|
+                               <span>June, 2017</span>|
                                <span> Category: typography</span>|
                                <span> website: <a href="http://www.themefisher.com">Themefisher</a></span>
                             </div>
@@ -149,18 +149,15 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/writing.jpg">
+                                <img class="img-responsive" alt="" src="images/portfolio/java-library.png">
                             </div>
+                            <a href="https://github.com/NayNay811/Java-Library">JavaScript Library</a>
                             <div class="portfolio-content">
-                                <p>I have been writing since I was nine, it is my passion, and I like to think of myself as a story teller. While none of my work has been published, I do have long term goals of finishing the novel I am currently working on, and try to get it publish.</p>
-                                <p>Here are some samples of my writing works: </p>
-                                <a href="better_things.pdf"><h4>Green Flame</h4></a>
                                 <p>
-                                   An unused scene from the novel I am currently working on. It is one of my favorites that I wish I could have kept in. Meant to be the starting scene, this is my main character’s father wishing for better things for himself and his daughter. 
+                                    This is a library of Java script commands? Functions? I learned while gaining my gold badge from Eleven Fifty Academy, and shows my understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
                                 </p>
-                                <a href="legend_of_us.pdf"><h4>Legend Of Us</h4></a>
                                 <p>
-                                    A short piece, expressing a feeling I have long had about current civilization.
+                                    <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
                                 </p>
                             </div>
                          
@@ -173,64 +170,16 @@
             <div class="container">
                 <h2 class="subtitle">Featured Works</h2>
                     <p class="subtitle-des">
-                        <!-- Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. -->
+                        Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
                     </p>
                 <div class="row">
                     <div class="col-sm-3">
                          <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/marketing.png" class="img-responsive" alt="portfolio items">
+                                <img src="images/portfolio/StoreFrontStools.png" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-marketing.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <figcaption>
-                                <h4>
-                                    <a href="single-portfolio-marketing.html">
-                                        Marketing Plan        
-                                    </a>
-                                </h4>
-                                <p>
-                                   <!--  Redesigne UI Concept -->
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
-                            <div class="img-wrapper">
-                                <img src="images/portfolio/recording.jpg" class="img-responsive" alt="portfolio items">
-                                <div class="overlay">
-                                    <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-recording.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <figcaption>
-                                <h4>
-                                    <a href="single-portfolio-recording.html">
-                                        Recording Work        
-                                    </a>
-                                </h4>
-                                <p>
-                                  <!--   Lorem ipsum dolor sit. -->
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
-                            <div class="img-wrapper">
-                                <img src="images/portfolio/storefrontstools.png" class="img-responsive" alt="">
-                                <div class="overlay">
-                                    <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a> -->        
+                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a>    -->     
                                         <a target="_blank" href="single-portfolio-storefront.html">Details</a>
                                     </div>
                                 </div>
@@ -238,11 +187,59 @@
                             <figcaption>
                                 <h4>
                                     <a href="single-portfolio-storefront.html">
-                                        HTML Storefront        
+                                    HTML storefront        
                                     </a>
                                 </h4>
                                 <p>
-                                   <!--  Lorem ipsum dolor sit amet. -->
+                                  <!--   Redesigne UI Concept -->
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
+                            <div class="img-wrapper">
+                                <img src="images/portfolio/css_creature.png" class="img-responsive" alt="portfolio items">
+                                <div class="overlay">
+                                    <div class="buttons">
+                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/css_creature.png">Demo</a>  -->       
+                                        <a target="_blank" href="single-portfolio-css-creature.html">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <figcaption>
+                                <h4>
+                                    <a href="single-portfolio-css-creature.html">
+                                        CSS Creature       
+                                    </a>
+                                </h4>
+                                <p>
+                                    <!-- Lorem ipsum dolor sit. -->
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
+                            <div class="img-wrapper">
+                                <img src="images/portfolio/node_chat_app.png" class="img-responsive" alt="">
+                                <div class="overlay">
+                                    <div class="buttons">
+                                       <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/node_chat_app.png">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-Ajax-friend.html">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <figcaption>
+                                <h4>
+                                    <a href="single-portfolio-Ajax-friend.html">
+                                         Node Chat App        
+                                    </a>
+                                </h4>
+                                <p>
+                                  <!--   Lorem ipsum dolor sit amet. -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -255,14 +252,14 @@
                                 <div class="overlay">
                                     <div class="buttons">
                                         <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
+                                        <a target="_blank" href="single-portfolio-Logos.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-logos.html">
-                                        Adobe Illustratior Logos        
+                                    <a href="single-portfolio-Logos.html">
+                                        Adobe Illustrator Logos      
                                     </a>
                                 </h4>
                                 <p>
