--- a/contact.html
+++ b/contact.html
@@ -91,20 +91,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
-                                        <li><a href="single-portfolio-recording.html">Recording work</a></li>
-                                        <li><a href="single-portfolio-logos.html">Logos</a></li>
-                                        <li><a href="single-portfolio-storefront.html">HTML Storefront</a></li>
-                                        <li><a href="single-portfolio-css-creature.html">CSS Creature</a></li>
-                                        <li><a href="single-portfolio-java-library.html">Java Library</a></li>
-                                        <li><a href="single-portfolio-Ajax-friend.html">Node Chat App</a></li>
-                                        <li><a href="single-portfolio-vector.html">Vector Art</a></li>
-                                        <li><a href="single-portfolio-writing.html">Creative Writing</a></li>
+                                        <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-social-media.html">Social Media</a></li>
+                                        <li><a href="single-portfolio-coding.html">Coding</a></li>
 
                                     </ul>
-                                </div>
-                            </li>
                             <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
                                 <div class="dropdown-menu">
@@ -158,7 +150,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2 class="subtitle wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Contact With Me</h2>
+                            <h2 class="subtitle wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Contact Me</h2>
                             <p class="subtitle-des wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".5s">
                                 <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, ea!
                                  consectetur adipisicing elit. Dolore, ea! -->
@@ -227,7 +219,7 @@
                     <div class="col-md-6">
                         <div class="phone wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".9s">
                             <i class="ion-ios-telephone-outline"></i>
-                            <p>260 206 9584</p>
+                            <p>260 200 0684</p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +242,7 @@
                         <div class="block">
                             <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">INTERESTED IN WORKING TOGETHER? ?</h1>
                             <!-- <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p> -->
-                            <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact With Me</a>
+                            <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Me</a>
                         </div>
                     </div>
                     
