--- a/Old_pages/single-portfolio-marketing.html
+++ b/Old_pages/single-portfolio-marketing.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Creative Writing</title>
+        <title>Marketing Plan</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -91,7 +91,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                     <!-- <li><a href="gallery.html">Gallery</a></li> -->
                                         <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
                                         <li><a href="single-portfolio-recording.html">Recording work</a></li>
                                         <li><a href="single-portfolio-logos.html">Logos</a></li>
@@ -132,9 +132,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2>Creative Writing</h2>
+                            <h2>Marketing Plan</h2>
                             <div class="portfolio-meta">
-                               <span>Feb 9, 2018</span>|
+                               <span>June, 2017</span>|
                                <span> Category: typography</span>|
                                <span> website: <a href="http://www.themefisher.com">Themefisher</a></span>
                             </div>
@@ -149,18 +149,15 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/writing.jpg">
+                                <img class="img-responsive" alt="" src="images/portfolio/marketing.png">
                             </div>
+                           <a href="marketing_plan.pdf">Promotion.pdf</a>
                             <div class="portfolio-content">
-                                <p>I have been writing since I was nine, it is my passion, and I like to think of myself as a story teller. While none of my work has been published, I do have long term goals of finishing the novel I am currently working on, and try to get it publish.</p>
-                                <p>Here are some samples of my writing works: </p>
-                                <a href="better_things.pdf"><h4>Green Flame</h4></a>
                                 <p>
-                                   An unused scene from the novel I am currently working on. It is one of my favorites that I wish I could have kept in. Meant to be the starting scene, this is my main character’s father wishing for better things for himself and his daughter. 
+                                    Done my freshmen year, as a group, we created a full business plan for a fictional company. This is my portion, the marketing plan. This business would sell fresh locally grown throughout the year, but more specifically in winter. This would be accomplished by growing the food in greenhouses. For promoting our product, I decided that cultivating an image of a local business concerned about the customer would be the best marketing strategy. 
                                 </p>
-                                <a href="legend_of_us.pdf"><h4>Legend Of Us</h4></a>
                                 <p>
-                                    A short piece, expressing a feeling I have long had about current civilization.
+                                    The main tools we would use for promotion was word of mouth, using local fairs and farmer’s markets and other local events. We planned to become involved and well known in and around Fort Wayne Indiana. Beyond we plan to use a pulsing schedule to advertise on local radio, newspapers, and targeted Facebook ads.
                                 </p>
                             </div>
                          
@@ -173,24 +170,24 @@
             <div class="container">
                 <h2 class="subtitle">Featured Works</h2>
                     <p class="subtitle-des">
-                        <!-- Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. -->
+                       <!--  Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. -->
                     </p>
                 <div class="row">
                     <div class="col-sm-3">
                          <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/marketing.png" class="img-responsive" alt="portfolio items">
+                                <img src="images/portfolio/storefrontstools.png" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-marketing.html">Details</a>
+                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-storefront.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-marketing.html">
-                                        Marketing Plan        
+                                    <a href="single-portfolio-storefront.html">
+                                        HTML Storefrone        
                                     </a>
                                 </h4>
                                 <p>
@@ -206,7 +203,7 @@
                                 <img src="images/portfolio/recording.jpg" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>  -->       
+                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>   -->      
                                         <a target="_blank" href="single-portfolio-recording.html">Details</a>
                                     </div>
                                 </div>
@@ -218,7 +215,7 @@
                                     </a>
                                 </h4>
                                 <p>
-                                  <!--   Lorem ipsum dolor sit. -->
+                                   <!--  Lorem ipsum dolor sit. -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -227,22 +224,22 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/storefrontstools.png" class="img-responsive" alt="">
+                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a> -->        
-                                        <a target="_blank" href="single-portfolio-storefront.html">Details</a>
+                                       <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-3.jpg">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-storefront.html">
-                                        HTML Storefront        
+                                    <a href="single-portfolio-logos.html">
+                                        Adobe Illustrator Logos        
                                     </a>
                                 </h4>
                                 <p>
-                                   <!--  Lorem ipsum dolor sit amet. -->
+                                    <!-- Lorem ipsum dolor sit amet. -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -251,22 +248,22 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
+                                <img src="images/portfolio/writing.jpg" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
+                                      <!--   <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/writing.jpg">Demo</a> -->        
+                                        <a target="_blank" href="single-portfolio-writing.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-logos.html">
-                                        Adobe Illustratior Logos        
+                                    <a href="single-portfolio-writing.html">
+                                        Creative Writing       
                                     </a>
                                 </h4>
                                 <p>
-                                  <!--   Lorem ipsum dolor. -->
+                                    <!-- Lorem ipsum dolor. -->
                                 </p>
                             </figcaption>
                         </figure>
