--- a/Old_pages/single-portfolio-recording.html
+++ b/Old_pages/single-portfolio-recording.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Creative Writing</title>
+        <title>Recording Work</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -91,7 +91,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                         <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                        <!--  <li><a href="gallery.html">Gallery</a></li> -->
                                         <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
                                         <li><a href="single-portfolio-recording.html">Recording work</a></li>
                                         <li><a href="single-portfolio-logos.html">Logos</a></li>
@@ -132,9 +132,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2>Creative Writing</h2>
+                            <h2>Recording Work</h2>
                             <div class="portfolio-meta">
-                               <span>Feb 9, 2018</span>|
+                               <span>June, 2017</span>|
                                <span> Category: typography</span>|
                                <span> website: <a href="http://www.themefisher.com">Themefisher</a></span>
                             </div>
@@ -149,19 +149,18 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/writing.jpg">
+                                <img class="img-responsive" alt="" src="images/portfolio/recording.jpg">
                             </div>
+                            <audio controls>
+                                <source src="podcast.mp3" type="audio/mpeg">
+                            </audio>
                             <div class="portfolio-content">
-                                <p>I have been writing since I was nine, it is my passion, and I like to think of myself as a story teller. While none of my work has been published, I do have long term goals of finishing the novel I am currently working on, and try to get it publish.</p>
-                                <p>Here are some samples of my writing works: </p>
-                                <a href="better_things.pdf"><h4>Green Flame</h4></a>
                                 <p>
-                                   An unused scene from the novel I am currently working on. It is one of my favorites that I wish I could have kept in. Meant to be the starting scene, this is my main character’s father wishing for better things for himself and his daughter. 
+                                    In the fall of my sophomore year for a speech class we were assigned to record a podcast with the help of music tech students. For this assignment, I conducted an interview of one of the cast member of a university play. I worked to coordinate with her, and with the music tech students to arrange the meeting up time. The music tech students worked the recording equipment, and edited the final project. I picked the topic, worked to arrange the interview, and picked the questions asked.
                                 </p>
-                                <a href="legend_of_us.pdf"><h4>Legend Of Us</h4></a>
                                 <p>
-                                    A short piece, expressing a feeling I have long had about current civilization.
-                                </p>
+                                    <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident.
+                                </p> -->
                             </div>
                          
                         </div>
@@ -172,9 +171,9 @@
             <section class="works works-fit">
             <div class="container">
                 <h2 class="subtitle">Featured Works</h2>
-                    <p class="subtitle-des">
-                        <!-- Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. -->
-                    </p>
+                   <!--  <p class="subtitle-des">
+                        Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
+                    </p> -->
                 <div class="row">
                     <div class="col-sm-3">
                          <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
@@ -182,7 +181,7 @@
                                 <img src="images/portfolio/marketing.png" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>  -->       
+                                       <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>   -->      
                                         <a target="_blank" href="single-portfolio-marketing.html">Details</a>
                                     </div>
                                 </div>
@@ -194,7 +193,7 @@
                                     </a>
                                 </h4>
                                 <p>
-                                   <!--  Redesigne UI Concept -->
+                                    <!-- Redesigne UI Concept -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -203,18 +202,18 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/recording.jpg" class="img-responsive" alt="portfolio items">
+                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-recording.html">Details</a>
+                                       <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-2.jpg">Demo</a>  -->       
+                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-recording.html">
-                                        Recording Work        
+                                    <a href="single-portfolio-logos.html">
+                                       Abode Illustrator Logos       
                                     </a>
                                 </h4>
                                 <p>
@@ -230,7 +229,7 @@
                                 <img src="images/portfolio/storefrontstools.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a> -->        
+                                      <!--   <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a>  -->       
                                         <a target="_blank" href="single-portfolio-storefront.html">Details</a>
                                     </div>
                                 </div>
@@ -251,22 +250,22 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
+                                <img src="images/portfolio/writing.jpg" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
+                                      <!--   <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/writing.jpg">Demo</a>  -->       
+                                        <a target="_blank" href="single-portfolio-writing.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-logos.html">
-                                        Adobe Illustratior Logos        
+                                    <a href="single-portfolio-writing.html">
+                                        Creative Writing        
                                     </a>
                                 </h4>
                                 <p>
-                                  <!--   Lorem ipsum dolor. -->
+                                   <!--  Lorem ipsum dolor. -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -288,7 +287,7 @@
                         <div class="col-md-12">
                             <div class="block">
                                 <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="300ms">SO WHAT YOU THINK ?</h1>
-                                <!-- <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p> -->
+                               <!--  <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p> -->
                                 <a href="#" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="300ms">Contact With Me</a>
                             </div>
                         </div>
