--- a/Old_pages/single-portfolio-storefront.html
+++ b/Old_pages/single-portfolio-storefront.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <title>Creative Writing</title>
+        <title>HTML Store Front</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="author" content="">
@@ -105,7 +105,7 @@
                                     </ul>
                                 </div>
                             </li>
-                            <!-- <li class="dropdown">
+                           <!--  <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
@@ -132,9 +132,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2>Creative Writing</h2>
+                            <h2>HTML Store Front</h2>
                             <div class="portfolio-meta">
-                               <span>Feb 9, 2018</span>|
+                               <span>June, 2017</span>|
                                <span> Category: typography</span>|
                                <span> website: <a href="http://www.themefisher.com">Themefisher</a></span>
                             </div>
@@ -149,18 +149,15 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="portfolio-single-img">
-                                <img class="img-responsive" alt="" src="images/portfolio/writing.jpg">
+                                <img class="img-responsive" src="images/portfolio/storefrontstools.png">
                             </div>
+                            <a href="HTML_storefront/Store_Front.html">Mock Store Front</a>
                             <div class="portfolio-content">
-                                <p>I have been writing since I was nine, it is my passion, and I like to think of myself as a story teller. While none of my work has been published, I do have long term goals of finishing the novel I am currently working on, and try to get it publish.</p>
-                                <p>Here are some samples of my writing works: </p>
-                                <a href="better_things.pdf"><h4>Green Flame</h4></a>
                                 <p>
-                                   An unused scene from the novel I am currently working on. It is one of my favorites that I wish I could have kept in. Meant to be the starting scene, this is my main character’s father wishing for better things for himself and his daughter. 
+                                    One of the many projects I completed getting my gold badge from Eleven Fifty Academy. This humorous mock store front was done entirely with html and bootstrap, while html is by no means my specialty, I do have an understanding of the language. While at the ICI and eleven fifty training program, I worked highly talented people from a variety of different majors, with talents and expiries. We would often help each other with our projects, working together to complete our work.
                                 </p>
-                                <a href="legend_of_us.pdf"><h4>Legend Of Us</h4></a>
                                 <p>
-                                    A short piece, expressing a feeling I have long had about current civilization.
+                                    <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis expedita repellendus laboriosam aliquid. Neque doloribus ea, id reprehenderit alias saepe debitis eligendi molestias odit, nesciunt rem. Dolorem saepe, provident dolore nesciunt laudantium nostrum enim natus veritatis harum maxime et iure ratione, nulla. Minus excepturi commodi tempore voluptate. Blanditiis similique dolor asperiores ex excepturi perspiciatis, dolores id esse. Voluptate beatae nesciunt cum esse ratione officiis necessitatibus blanditiis ea, laboriosam fugit vero maxime? Voluptatum illo dolorum autem pariatur quisquam. Voluptates soluta culpa necessitatibus veritatis tempora incidunt doloribus placeat repellat et facilis eum sapiente fugit numquam aut, laboriosam aspernatur, esse, magnam excepturi repudiandae amet voluptas nulla quidem. Veritatis nisi consequuntur saepe qui quisquam dignissimos assumenda, iusto odio. Dignissimos reprehenderit esse iusto cupiditate nisi enim, animi similique itaque, perspiciatis error qui. Aperiam, architecto provident. -->
                                 </p>
                             </div>
                          
@@ -172,41 +169,17 @@
             <section class="works works-fit">
             <div class="container">
                 <h2 class="subtitle">Featured Works</h2>
-                    <p class="subtitle-des">
-                        <!-- Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. -->
-                    </p>
+                    <!-- <p class="subtitle-des">
+                        Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
+                    </p> -->
                 <div class="row">
                     <div class="col-sm-3">
                          <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/marketing.png" class="img-responsive" alt="portfolio items">
-                                <div class="overlay">
-                                    <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-marketing.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <figcaption>
-                                <h4>
-                                    <a href="single-portfolio-marketing.html">
-                                        Marketing Plan        
-                                    </a>
-                                </h4>
-                                <p>
-                                   <!--  Redesigne UI Concept -->
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
-                            <div class="img-wrapper">
                                 <img src="images/portfolio/recording.jpg" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>  -->       
+                                        <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/recording.jpg">Demo</a>        
                                         <a target="_blank" href="single-portfolio-recording.html">Details</a>
                                     </div>
                                 </div>
@@ -218,7 +191,7 @@
                                     </a>
                                 </h4>
                                 <p>
-                                  <!--   Lorem ipsum dolor sit. -->
+                                    <!-- Redesigne UI Concept -->
                                 </p>
                             </figcaption>
                         </figure>
@@ -227,18 +200,42 @@
                     <div class="col-sm-3">
                         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                             <div class="img-wrapper">
-                                <img src="images/portfolio/storefrontstools.png" class="img-responsive" alt="">
+                                <img src="images/portfolio/marketing.png" class="img-responsive" alt="portfolio items">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/storefrontstools.png">Demo</a> -->        
-                                        <a target="_blank" href="single-portfolio-storefront.html">Details</a>
+                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/marketing.png">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-marketing.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-storefront.html">
-                                        HTML Storefront        
+                                    <a href="single-portfolio-marketing.html">
+                                        Marketing Plan       
+                                    </a>
+                                </h4>
+                                <p>
+                                   <!--  Lorem ipsum dolor sit. -->
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
+                            <div class="img-wrapper">
+                                <img src="images/portfolio/my_face_cover.png" class="img-responsive" alt="">
+                                <div class="overlay">
+                                    <div class="buttons">
+                                       <!--  <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-3.jpg">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-vector.html">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <figcaption>
+                                <h4>
+                                    <a href="single-portfolio-vector.html">
+                                        Vector Art        
                                     </a>
                                 </h4>
                                 <p>
@@ -254,19 +251,19 @@
                                 <img src="images/portfolio/logo_cover_picture.png" class="img-responsive" alt="">
                                 <div class="overlay">
                                     <div class="buttons">
-                                        <!-- <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>  -->       
-                                        <a target="_blank" href="single-portfolio-logos.html">Details</a>
+                                      <!--   <a rel="gallery" title="Proin imperdiet augue et magna interdum hendrerit" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>   -->      
+                                        <a target="_blank" href="single-portfolio-Logos.html">Details</a>
                                     </div>
                                 </div>
                             </div>
                             <figcaption>
                                 <h4>
-                                    <a href="single-portfolio-logos.html">
-                                        Adobe Illustratior Logos        
+                                    <a href="single-portfolio-Logos.html">
+                                        Adobe Illustrator Logos      
                                     </a>
                                 </h4>
                                 <p>
-                                  <!--   Lorem ipsum dolor. -->
+                                   <!--  Lorem ipsum dolor. -->
                                 </p>
                             </figcaption>
                         </figure>
