--- a/about.html
+++ b/about.html
@@ -91,20 +91,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
-                                       <!--  <li><a href="gallery.html">Gallery</a></li> -->
-                                        <li><a href="single-portfolio-marketing.html">Marketing Plan</a></li>
-                                        <li><a href="single-portfolio-recording.html">Recording work</a></li>
-                                        <li><a href="single-portfolio-logos.html">Logos</a></li>
-                                        <li><a href="single-portfolio-storefront.html">HTML Storefront</a></li>
-                                        <li><a href="single-portfolio-css-creature.html">CSS Creature</a></li>
-                                        <li><a href="single-portfolio-java-library.html">Java Library</a></li>
-                                        <li><a href="single-portfolio-Ajax-friend.html">Node Chat App</a></li>
-                                        <li><a href="single-portfolio-vector.html">Vector Art</a></li>
-                                        <li><a href="single-portfolio-writing.html">Creative Writing</a></li>
+                                        <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                        <li><a href="single-portfolio-public_relations.html">Communication and Graphic ArtWork</a></li>
+                                        <li><a href="single-portfolio-social-media.html">Social Media</a></li>
+                                        <li><a href="single-portfolio-coding.html">Coding</a></li>
 
                                     </ul>
-                                </div>
-                            </li>
                             <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
                                 <div class="dropdown-menu">
@@ -157,18 +149,18 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 wow fadeInLeft" data-wow-delay=".3s" >
-                            <img src="images/about/summer.png" alt="" class="img-responsive">
+                            <img src="images/about/prof_photo2.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6">
                             <div class="block">
                                 <h3 class="subtitle wow fadeInUp" data-wow-delay=".3s" data-wow-duration="500ms">My Background</h3>
                                 <p class="wow fadeInUp" data-wow-delay=".5s" data-wow-duration="500ms"> I believe anything worth doing is worth doing well. </p>
                                 <p class="wow fadeInUp" data-wow-delay=".5s" data-wow-duration="500ms">I am currently a student at the University of Saint Francis set to graduate with a degree in Communications and Public Relations in 2019. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I am versatile, adaptable and driven. I have done work in design, programming, marketing, worked with audio engineers and hold an industry gold badge from Elven Fifty Coding Academy. Adding to all this I also have an understanding of Agile and Scrum. With this wide range of experience, I am uniquely qualified when it comes to cross functional communication. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I recived my gold badge from Elven Fifty in June of 2017, after taking a four week class put on by The Independant Collages of Indiana.</p>
-                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I have been accepted into META program at the University of Saint Francis. <a href="http://art.sf.edu/undergraduate/meta/" target="blank">META:</a> Media Entrepreneurship Training in the Arts is a cross-disciplinary collaborative that focuses on rigorous project-based learning to uniquely address the changing landscape of creative industries and potentially foster the growth of small businesses. </p>
-                                <p class="wow fadeInUp" data-wow-delay=".8s" data-wow-duration="500ms">I am seeking an internship working in cross functional communication. </p>
-
+                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have done work in design, programming, and marketing, and have worked with audio engineers and hold an industry gold badge from Elven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication. </p>
+                                <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I recived my gold badge from Eleven Fifty in June of 2017, after taking a four week class put on by The Independant Collages of Indiana.</p>
+                                <p class="wow fadeInUp" data-wow-delay=".8s" data-wow-duration="500ms">I am seeking an internship working in Social Media, Public Relations, or cross-functional communication. </p>
+                                <p> <a href="Ambrose-Nanette-Resume-2017.pdf"><h5> My Resume </h5></a></p>
+                                <p><a href="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"><h5> Linkedin</h5></a></p>
 
                             </div>
                         </div>
@@ -347,8 +339,8 @@
                     <div class="col-md-12">
                         <div class="block">
                             <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">SO WHAT YOU THINK ?</h1>
-                                <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
-                                <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact With Me</a>
+                               <!-- <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p> -->
+                                <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Me</a>
                             </div>
                         </div>
 
