--- a/single-portfolio-social-media.html
+++ b/single-portfolio-social-media.html
@@ -153,7 +153,7 @@
 
 
                                 <p><h4>Twitter</h4></p>
-                                <p><a href="https://twitter.com/?lang=en">@missythepretty</a></p>
+                                <p><a href="https://twitter.com/missythepretty">@missythepretty</a></p>
     
 
                                
@@ -166,7 +166,7 @@
 
        <section class="works works-fit">
             <div class="container">
-                <h2 class="subtitle">Some Of Our Features Works</h2>
+                <h2 class="subtitle">Some Of My Features Works</h2>
                 <!--<p class="subtitle-des">
                     Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
 
