New name, Trees Indiana and Commuter_USFFW
New name, Trees Indiana and Commuter_USFFW fall 2018 resume

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                                 <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have done work in design, programming, and marketing, and have worked with audio engineers and hold an industry gold badge from Elven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication. </p>
                                 <p class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">I recived my gold badge from Eleven Fifty in June of 2017, after taking a four week class put on by The Independant Collages of Indiana.</p>
                                 <p class="wow fadeInUp" data-wow-delay=".8s" data-wow-duration="500ms">I am seeking an internship working in Social Media, Public Relations, or cross-functional communication. </p>
-                                <p> <a href="Ambrose-Nanette-Resume-2017.pdf"><h5> My Resume </h5></a></p>
+                                <p> <a href="Resume Fall 2018. Nanette Ambrose.pdf"><h5> My Resume </h5></a></p>
                                 <p><a href="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"><h5> Linkedin</h5></a></p>
 
                             </div>
