--- a/single-portfolio-coding.html
+++ b/single-portfolio-coding.html
@@ -97,7 +97,7 @@
                                         <li><a href="single-portfolio-coding.html">Coding</a></li>
 
                                     </ul>
-                            <li class="dropdown">
+                           <!--  <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
@@ -106,7 +106,7 @@
                                         <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
                                     </ul>
                                 </div>
-                            </li>
+                            </li> -->
                             <li><a href="contact.html">Contact</a></li>
                             
                         </ul>
