--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     I am versatile, adaptable and driven. I have both strong written and interpersonal communications skills. I have worked in social media managment, and digital communication, design, programming, marketing, and have worked with audio engineers. I have an industry gold badge from Eleven Fifty Coding Academy. With this wide range of experience, I am uniquely qualified in the field of communication.
                                 </p>
                                 <p>I am seeking a position in Social Media, Public Relations, or cross-functional communication.</p>
-                                <p> <a href="Resume Fall 2018. Nanette Ambrose.pdf"><h5> My Resume </h5></a></p>
+                                <p> <a href="Resume-Fall-2018-Nanette-Ambrose.pdf"><h5> My Resume </h5></a></p>
                                 <p><a href="https://www.linkedin.com/in/nanette-ambrose-7a80b611b/"><h5> Linkedin</h5></a></p>
                             </div>
                             
